--- a/css/style.css
+++ b/css/style.css
@@ -304,3 +304,49 @@ pre {
     margin-inline: 11px;
   }
 
+  @media only screen and (max-width: 360px) {
+    body {
+      /* background: aqua; */
+    }
+
+    .header {
+      position: static;
+    }
+
+    .header header{
+      position: static;
+    }
+
+    .wrapper {
+      margin: auto;
+      padding-inline: 10px;
+    }
+
+    h1 {
+      margin-block: 35px;
+      font-size: 40px;
+      line-height: 50px;
+      text-align: center;
+    }
+
+    blockquote p{
+      font-size: 20px;
+    }
+
+    pre {
+      overflow: scroll;
+    }
+
+    .conceptos img {
+      inline-size: 100%;
+    }
+
+    .footer {
+      padding-block: 25px;
+    }
+
+    .footer p {
+      font-size: 25px;
+    }
+  }
+
